--- a/index.html
+++ b/index.html
@@ -2,25 +2,23 @@
 <html lang="en">
   <head>
     <title>Carlos Ortiz</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
       integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm"
-      crossorigin="anonymous"
-    />
-    " />
-    <link href="https://fonts.googleapis.com">
-    <link href="https://fonts.gstatic.com">
+      crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com" rel="stylesheet">
+    <link href="https://fonts.gstatic.com" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@300;700&family=Quattrocento:wght@400;700&display=swap"
       rel="stylesheet">
   </head>
   <body>
     <section id="banner">
-      <img src="wes-hicks-MEL-jJnm7RQ-unsplash.jpg" class="logo">
+      <img src="wes-hicks-MEL-jJnm7RQ-unsplash.jpg" alt="logo">
       <div class="banner-text">
         <h1>Carlos Ortiz</h1>
         <p>Husband, Father, Creative, Musician. This is his story</p>
@@ -40,61 +38,61 @@
       </nav>
     </div>
     <div id="menuBtn">
-      <img src="icon-menu-activity-feed-icon-11553482592wwpydnwylb.png"id="menu">
+      <img
+        src="icon-menu-activity-feed-icon-11553482592wwpydnwylb.png"
+        alt="menu">
     </div>
 
-    <!--Features---->
-    
-      <section id="All About Carlos">
-        <div class="title-text">
-          <p>FEATURES</p>
-          <h1>All About Carlos</h1>
+    <!--Features-->
+
+    <section id="All About Carlos">
+      <div class="title-text">
+        <p>FEATURES</p>
+        <h1>All About Carlos</h1>
+      </div>
+      <div class="feature-box"></div>
+      <div class="features"></div>
+      <div class="features-img"></div>
+      <img src="hobby 1.jpeg" alt="Hobby1">
+      <h1>Husband & Father</h1>
+      <div class="features-desc">
+        <div class="feature-icon">
+          <i class="fa fa-bookmark-o"></i>
         </div>
-        <div class="feature-box">
-          <div class="features">
+        <div class="feature-text">
+          <p>
+            Carlos is a husband and father to two adorable little children. He
+            loves to spend most of his time hanging out with his family.
+          </p>
         </div>
-        <div class="features-img">
-          <img src="hobby 1.jpeg">
-          <h1>Husband & Father</h1>
-          <div class="features-desc">
-          <div class="feature-icon">
-            <i class="fa fa-bookmark-o"></i>
-          </div>
-          <div class="feature-text">
-            <p>
-              Carlos is a husband and father to two adorable little children. He
-              loves to spend most of his time hanging out with his family.
-            </p>
-          </div>
+      </div>
+      <div class="features-img2">
+        <img src="hobby 3.jpeg" alt="Hobby3">
+        <h1>Barista</h1>
+        <div class="features-desc"></div>
+        <div class="feature-icon">
+          <i class="fa fa-bookmark-o"></i>
         </div>
-        <div class="features-img2">
-          <img src="hobby 3.jpeg">
-          <h1>Barista</h1>
-          <div class="features-desc"></div>
-          <div class="feature-icon">
-            <i class="fa fa-bookmark-o"></i>
-          </div>
-          <div class="feature-text">
-            <p>
-              Carlos has always loved coffee and has a passion for brewing that
-              perfect cup.
-            </p>
-          </div>
+        <div class="feature-text">
+          <p>
+            Carlos has always loved coffee and has a passion for brewing that
+            perfect cup.
+          </p>
         </div>
-        <div class="features-img3">
-          <img src="hobby 2.jpeg">
-          <h1>Musician & Producer</h1>
-          <div class="features-desc"></div>
-          <div class="feature-icon">
-            <i class="fa fa-bookmark-o"></i>
-          </div>
-          <div class="feature-text">
-            <p>Carlos had a passion for music and songwriting at a young age</p>
-          </div>
+      </div>
+      <div class="features-img3">
+        <img src="hobby 2.jpeg" alt="Hobby2">
+        <h1>Musician & Producer</h1>
+        <div class="features-desc"></div>
+        <div class="feature-icon">
+          <i class="fa fa-bookmark-o"></i>
         </div>
-        <div class="carlosortizportrait.png"></div>
-      </section>
-    </Features>
+        <div class="feature-text">
+          <p>Carlos had a passion for music and songwriting at a young age</p>
+        </div>
+      </div>
+      <div class="carlosortizportrait.png"></div>
+    </section>
 
     <script>
       var menuBtn = document.getElementById(menuBtn);
