--- a/index.html
+++ b/index.html
@@ -2,23 +2,25 @@
 <html lang="en">
   <head>
     <title>Carlos Ortiz</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css"
       integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm"
-      crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com" rel="stylesheet">
-    <link href="https://fonts.gstatic.com" rel="stylesheet">
+      crossorigin="anonymous"
+    />
+    <link href="https://fonts.googleapis.com" rel="stylesheet" />
+    <link href="https://fonts.gstatic.com" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@300;700&family=Quattrocento:wght@400;700&display=swap"
-      rel="stylesheet">
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section id="banner">
-      <img src="wes-hicks-MEL-jJnm7RQ-unsplash.jpg" alt="logo">
+      <img src="wes-hicks-MEL-jJnm7RQ-unsplash.jpg" alt="logo" />
       <div class="banner-text">
         <h1>Carlos Ortiz</h1>
         <p>Husband, Father, Creative, Musician. This is his story</p>
@@ -40,12 +42,13 @@
     <div id="menuBtn">
       <img
         src="icon-menu-activity-feed-icon-11553482592wwpydnwylb.png"
-        alt="menu">
+        alt="menu"
+      />
     </div>
 
     <!--Features-->
 
-    <section id="All About Carlos">
+    <section id="Carlos">
       <div class="title-text">
         <p>FEATURES</p>
         <h1>All About Carlos</h1>
@@ -53,7 +56,7 @@
       <div class="feature-box"></div>
       <div class="features"></div>
       <div class="features-img"></div>
-      <img src="hobby 1.jpeg" alt="Hobby1">
+      <img src="hobby1.png" alt="Hobby1" />
       <h1>Husband & Father</h1>
       <div class="features-desc">
         <div class="feature-icon">
@@ -67,7 +70,7 @@
         </div>
       </div>
       <div class="features-img2">
-        <img src="hobby 3.jpeg" alt="Hobby3">
+        <img src="hobby3.png" alt="Hobby3" />
         <h1>Barista</h1>
         <div class="features-desc"></div>
         <div class="feature-icon">
@@ -81,7 +84,7 @@
         </div>
       </div>
       <div class="features-img3">
-        <img src="hobby 2.jpeg" alt="Hobby2">
+        <img src="hobby2.png" alt="Hobby2" />
         <h1>Musician & Producer</h1>
         <div class="features-desc"></div>
         <div class="feature-icon">
