--- a/landing.html
+++ b/landing.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <section id="banner">
-      <img src="wes-hicks-mel-jjnm7rq-unsplash.png" alt="logo">
+      <img src="wes-hicks-mel-jjnm7rq-unsplash.png" alt="logo" />
       <div class="banner-text">
         <h1>Carlos Ortiz</h1>
         <p>Husband, Father, Creative, Musician. This is his story</p>
@@ -57,7 +57,7 @@
       <div class="features"></div>
       <div class="features-img"></div>
       <img
-        src="Images copy/hobby1.jpg" 
+        src="Imagescopy/hobby1.jpg"
         alt="Photo of Carlos, his wife and two children"
       />
       <h1>Husband & Father</h1>
@@ -74,7 +74,7 @@
       </div>
       <div class="features-img2">
         <img
-          src="Images copy/hobby1.jpg"
+          src="Imagescopy/hobby3.jpg"
           alt="Carlos brewing coffee in a cafe"
         />
         <h1>Barista</h1>
@@ -91,7 +91,7 @@
       </div>
       <div class="features-img3">
         <img
-          src="Images copy/hobby3.jpg"
+          src="Imagescopy/hobby3.jpg"
           alt="Carlos Ortiz singing and playing guitar in his studio"
         />
         <h1>Musician & Producer</h1>
@@ -103,12 +103,12 @@
           <p>Carlos had a passion for music and songwriting at a young age.</p>
         </div>
       </div>
-      <div
-        class="features-img1">
-        <img src="Images copy/hobby2.jpg">
+      <div class="features-img1">
+        <img
+          src="Imagescopy/hobby2.jpg"
+          alt="Carlos brewing coffee in a cafe"
+        />
       </div>
-        
-      ></div>
     </section>
 
     <script>
