--- a/hobbies.html
+++ b/hobbies.html
@@ -16,23 +16,23 @@
           <div class="header">
              <div class="wrapper1">
             <div class="sidebar">
-                    <h2></h2>
+                    <h2>Navigation</h2>
                   <ul>
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="#">HOBBIES</a></li>
                   </ul>
               </div>
+            </div>
+            </div>
 
 
           <div class="text-box">
                 <h1>Hobbies</h1>
-            </p>
-            <p></p>
           </div>
 
           <div class="wrapper">
-                <img src="Images copy/hobby1.jpg" alt-="">
+                <img src="Imagescopy/hobby1.jpg" alt="">
                 <div class="text-box">
                     <p>Carlos Ortiz is an incredible human being. Coming from a family living in poverty stricken Puerto Rico and parts of Florida, he has achieved many things such as being a first generation college graduate. He had a lot fighting against him in childhood but he would say that that made him stronger and helped him “shoot for the stars”. 
                         It is through that hardship that he became the man and the creative that he is today. He is a wonderful husband and father and works very hard to provide a great life for his family. He does so by the many gifts and talents he possesses. One such gift is his musical ability. </p>
@@ -42,7 +42,7 @@
 
 
             <div class="wrapper2">
-                <img src="Images copy/hobby3.jpg" alt="">
+                <img src="Imagescopy/hobby3.jpg" alt="">
                 <div class="text-box2">
                     <p>Carlos has always had a passion for music. Ever since he was a child, he was drawn to the way music sounded when he listened to or played an instrument. Carlos is a self taught musician and learned a lot from his uncle who is a musician and producer by trade. His uncle was the inspiration for Carlos to pursue a career in music. 
                         Although he works as a coordinator at a coffee shop on the side, Carlos still continues to pursue music and keep it a central part of his life.</p>
@@ -50,7 +50,7 @@
            
            
             <div class="wrapper3">
-                <img src="Images copy/embellishment 2.jpg" alt="">
+                <img src="Imagescopy/embellishment2.jpg" alt="">
                 <div class="text-box3">
                     <p> To this day he incorporates music into his everyday life by playing music for his kids, playing gigs, writing and producing his own music, etc. Music is a part of his DNA and he feels rhythm in his veins. Carlos uses his music to reach others who may be experiencing the same things he is. His music is an outlet for troubles and 
                         difficulties he faces in his daily life. He hopes that when people listen to his music, they can relate and feel encouraged. </p>
