--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <title>About Carlos Ortiz</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta charset="UTF-8" />
+    <meta charset"UTF-8" />
     <link rel="stylesheet" href="aboutstyle.css">
     <link href="https://fonts.googleapis.com" rel="stylesheet" />
     <link href="https://fonts.gstatic.com" rel="stylesheet" />
